# pdf-pilot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENT_REPORT.md  LICENSE  README.md  README_zh-CN.md  SECURITY.md  demo.ipynb  pyproject.toml  self_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
pdf_pilot/: __init__.py  cli.py  config.py  convert.py  model.py  router.py
pdf_pilot/detectors/: __init__.py  complexity.py  language.py  scanner.py
pdf_pilot/engines/: __init__.py  base.py  docling_engine.py  mineru_engine.py  pymupdf_engine.py
pdf_pilot/integrations/: __init__.py  langchain.py  llamaindex.py
pdf_pilot/output/: __init__.py  docx.py  markdown.py
scripts/: demo.py  demo_commands.sh  record_demo.sh
skills/pdf-pilot/: SKILL.md
tests/: conftest.py  generate_fixtures.py  test_detectors.py  test_engines.py  test_quality.py  test_router.py
